# LibEBC

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/ebc/: BitcodeArchive.h  BitcodeContainer.h  EmbeddedBitcode.h  EmbeddedExports.h  EmbeddedFile.h  EmbeddedFileFactory.h  EmbeddedObject.h  EmbeddedXar.h
lib/include/ebc/util/: Xar.h
lib/src/: BitcodeArchive.cpp  BitcodeContainer.cpp  BitcodeRetriever.cpp  EmbeddedFile.cpp  EmbeddedFileFactory.cpp
lib/src/util/: UUID.cpp  Xar.cpp
test/: CMakeLists.txt
tool/: CMakeLists.txt
